Edited wiki page through web user interface.

--- a/wiki/PythonResources.wiki
+++ b/wiki/PythonResources.wiki
@@ -4,3 +4,4 @@
 
   * Python pullDOM: http://docs.python.org/lib/module-xml.dom.pulldom.html
   * Python Library Reference: http://docs.python.org/lib/lib.html
+  * pullDOM example: http://mail.python.org/pipermail/xml-sig/2000-June/002571.html
