--- a/wiki/PythonResources.wiki
+++ b/wiki/PythonResources.wiki
@@ -2,7 +2,13 @@
 
 = Details =
 
+== Python links ==
+
   * Python pullDOM: http://docs.python.org/lib/module-xml.dom.pulldom.html
   * Python Library Reference: http://docs.python.org/lib/lib.html
   * pullDOM example: http://mail.python.org/pipermail/xml-sig/2000-June/002571.html
   * Python XML processing: http://www.idealliance.org/papers/dx_xml03/papers/06-02-03/06-02-03.html
+
+== XML Validation ==
+  * 4suite: http://4suite.org/index.xhtml
+  * A tour of 4suite (includes Python example): http://www.xml.com/pub/a/2002/10/16/py-xml.html
