--- a/trunk/xmlparser/README
+++ b/trunk/xmlparser/README
@@ -6,6 +6,10 @@ To use the XML parser, navigate to the folder containing parser.py and run it
 using the command "python parser.py". The file expects to receive input from
 stdin, and writes human-readable output to stdout.
 
+The parser now can also accept command line arguments for testing purposes.
+The command "python parser.py rooms1.xml" will validate rooms1.xml against
+relaxng.rng, parse its data, and print a human-readable form to stdout.
+
 The parser uses jing for validation against the provided RELAX NG schema, so
 it is important that "jing.jar" be located in the same folder. In order to
 validate using jing, it creates a file called "temp.xml". The specification 
